force-app/main/default/objects/Order/fields/Adresse_d_expedition__c.field-meta.xml
<CustomField>
    <fullName>Adresse_d_expedition__c</fullName>
    <formula>Account.ShippingStreet &amp; &quot;, &quot; &amp;
Account.ShippingCity &amp; &quot;, &quot; &amp;
Account.ShippingState &amp; &quot; &quot; &amp;
Account.ShippingPostalCode &amp; &quot;, &quot; &amp;
Account.ShippingCountry &amp; &quot;, &quot; &amp;
 Account.Complement_d_adresse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse d&apos;expédition</label>
    <type>Text</type>
</CustomField>