force-app/main/default/objects/Order/fields/Civilite__c.field-meta.xml
<CustomField>
    <fullName>Civilite__c</fullName>
    <formula>TEXT(ShipToContact.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Civilité</label>
    <type>Text</type>
</CustomField>