force-app/main/default/objects/Order/fields/Complement_adresse__c.field-meta.xml
<CustomField>
    <fullName>Complement_adresse__c</fullName>
    <formula>Account.Complement_d_adresse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complement adresse</label>
    <type>Text</type>
</CustomField>