force-app/main/default/objects/Order/fields/Date_d_emission__c.field-meta.xml
<CustomField>
    <fullName>Date_d_emission__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;émission</label>
    <type>Date</type>
</CustomField>