force-app/main/default/objects/Order/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer Panéliste</label>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Commandes</relationshipLabel>
    <relationshipName>Commandes</relationshipName>
    <type>Lookup</type>
</CustomField>