force-app/main/default/objects/Order/fields/Nom_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_contact__c</fullName>
    <formula>ShipToContact.LastName</formula>
    <label>Nom du contact</label>
    <type>Text</type>
</CustomField>