force-app/main/default/objects/Order/fields/ORD_ExtId_Cordon__c.field-meta.xml
<CustomField>
    <fullName>ORD_ExtId_Cordon__c</fullName>
    <displayFormat>C{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Référence Commande</label>
    <type>AutoNumber</type>
</CustomField>