force-app/main/default/objects/Order/fields/Prenom_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Prenom_du_contact__c</fullName>
    <formula>ShipToContact.FirstName</formula>
    <label>Prénom du contact</label>
    <type>Text</type>
</CustomField>