force-app/main/default/objects/Order/fields/ref_cordon_rdd_temp__c.field-meta.xml
<CustomField>
    <fullName>ref_cordon_rdd_temp__c</fullName>
    <description>Référence cordon pour reprise de données (champs temporaire avant report sur Ord_extid_cordon__c)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ref_cordon_rdd_temp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>