force-app/main/default/objects/Order/fields/Reference_transporteur__c.field-meta.xml
<CustomField>
    <fullName>Reference_transporteur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Référence transporteur</label>
    <length>32</length>
    <type>Text</type>
</CustomField>