force-app/main/default/objects/Order/fields/Requete__c.field-meta.xml
<CustomField>
    <fullName>Requete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Commandes</relationshipLabel>
    <relationshipName>Commandes</relationshipName>
    <type>Lookup</type>
</CustomField>