force-app/main/default/objects/Order/fields/Type_envoi__c.field-meta.xml
<CustomField>
    <fullName>Type_envoi__c</fullName>
    <label>Type d&apos;envoi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Contre signature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>