force-app/main/default/objects/Order/validationRules/RV02_Passage_statut_annule_impossible.validationRule-meta.xml
<ValidationRule>
    <fullName>RV02_Passage_statut_annule_impossible</fullName>
    <active>true</active>
    <description>Bloquer le passage du statut clôturé à annulé</description>
    <errorConditionFormula>AND(
				
		 $User.Bypass_validation_rules__c= false,	
  ISCHANGED( Status  ),
  (ISPICKVAL(PRIORVALUE( Status ), &quot;4&quot;)),
  ISPICKVAL( Status, &quot;5&quot;) 
		
		)</errorConditionFormula>
    <errorMessage>Une commande clôturée ne peut pas être annulée</errorMessage>
</ValidationRule>