force-app/main/default/objects/Order/listViews/Commandes_Erreur_de_transmission.listView-meta.xml
<ListView>
    <fullName>Commandes_Erreur_de_transmission</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Commandes Erreur de transmission</label>
</ListView>