force-app/main/default/objects/Order/listViews/Copie_de_Toutes_les_commandes_exp_di_es.listView-meta.xml
<ListView>
    <fullName>Copie_de_Toutes_les_commandes_exp_di_es</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORD_ExtId_Cordon__c</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Date_d_emission__c</columns>
    <columns>Reference_transporteur__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>4</value>
    </filters>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Remplacement de Matériel</value>
    </filters>
    <filters>
        <field>ORDERS.END_DATE</field>
        <operation>lessOrEqual</operation>
        <value>10/24/2023</value>
    </filters>
    <label>Toutes les commandes expédiées</label>
</ListView>