force-app/main/default/objects/Order/listViews/Pack_initial_pager_envoy_avec_setmeter.listView-meta.xml
<ListView>
    <fullName>Pack_initial_pager_envoy_avec_setmeter</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORD_ExtId_Cordon__c</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Date_d_emission__c</columns>
    <columns>Reference_transporteur__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>4</value>
    </filters>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Pack initial Pager</value>
    </filters>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>5/12/2023</value>
    </filters>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/13/2023</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>int</value>
    </filters>
    <label>Pack initial pager envoyé avec setmeter</label>
</ListView>