force-app/main/default/objects/Order/listViews/Toutes_les_commandes_emises.listView-meta.xml
<ListView>
    <fullName>Toutes_les_commandes_emises</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORD_ExtId_Cordon__c</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Date_d_emission__c</columns>
    <columns>Reference_transporteur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>1,2,3,4,5</value>
    </filters>
    <label>Toutes les commandes emises</label>
</ListView>